# place-rs

./: .dockeringore  .env.docker-example  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bundle.sh  docker-compose.yml
public/: index.html
public/css/: style.css
public/js/: app.js  leaderboard.js  menu.js  pixelInfo.js  toolbar.js
src/: appstate.rs  database.rs  main.rs  routes.rs  utils.rs  websocket.rs
src/models/: appstate.rs  mod.rs  user.rs
src/routes/: mod.rs  place.rs  user.rs  utils.rs
