[package]
name = "place-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-governor = "0.5.0"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
bcrypt = "0.15.0"
chrono = "0.4.34"
dotenv = "0.15.0"
flate2 = "1.0.28"
image = "0.24.9"
jsonwebtoken = "9.2.0"
lettre = "0.11.4"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
rand = "0.8.5"
regex = "1.10.3"
rusqlite = "0.31.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.57"
